# screencast

./: .mailmap  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  screencast.qbs
.github/workflows/: build.yml
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
cmake/: FindGStreamer.cmake
screencap/: main.cpp  screencap.cpp  screencap.h
screencast/: CMakeLists.txt  main.cpp  screencast.cpp  screencast.h  screencast.qbs
screencast/translations/: hawaii-screencast.ts  liri-screencast_ca.ts  liri-screencast_da.ts  liri-screencast_fr.ts  liri-screencast_it.ts  liri-screencast_nl.ts  liri-screencast_pt_PT.ts  liri-screencast_ru.ts  liri-screencast_zh_HK.ts
src/screencast/: CMakeLists.txt  io.liri.Shell.ScreenCast.xml  main.cpp  portal.cpp  portal.h  screencast.cpp  screencast.h  screencast.qbs
src/screencast/translations/: liri-screencast.ts  liri-screencast_de.ts  liri-screencast_es.ts  liri-screencast_es_MX.ts  liri-screencast_ja.ts  liri-screencast_nl.ts  liri-screencast_pt_BR.ts  liri-screencast_zh_CN.ts  screencast_ca.ts  screencast_da.ts  screencast_de.ts  screencast_es.ts  screencast_es_419.ts  screencast_es_MX.ts  screencast_fr.ts  screencast_it.ts  screencast_ja.ts  screencast_lt.ts  screencast_nl.ts  screencast_pl.ts  screencast_pt_BR.ts  screencast_pt_PT.ts  screencast_ru.ts  screencast_tr.ts  screencast_zh_CN.ts  screencast_zh_TW.ts
translations/: screencast.ts  screencast_ca.ts  screencast_da.ts  screencast_de.ts  screencast_es.ts  screencast_es_419.ts  screencast_es_MX.ts  screencast_fr.ts  screencast_it.ts  screencast_it_IT.ts  screencast_ja.ts  screencast_lt.ts  screencast_nl.ts  screencast_pl.ts  screencast_pt_BR.ts  screencast_pt_PT.ts  screencast_ru.ts  screencast_tr.ts  screencast_zh_CN.ts  screencast_zh_TW.ts
